--- a/angular1/package.json
+++ b/angular1/package.json
@@ -25,6 +25,7 @@
     "gulp-uglifycss": "^1.0.8",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
-    "gulp-webserver": "^0.9.1"
+    "gulp-webserver": "^0.9.1",
+    "klaw": "^2.0.0"
   }
 }
